// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox matches snapshot when has a label 1`] = `
.css-y5rx2e-Checkbox__root {
  position: relative;
  display: inline-block;
}

.css-1tp5q0a-Checkbox__wrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.css-1tp5q0a-Checkbox__wrapper:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-1kd1p7k-Checkbox__checkbox {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-nb67y4-Checkbox__input {
  visibility: hidden;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-1mryc00-Checkbox__label {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.css-1mryc00-Checkbox__label:hover {
  cursor: pointer;
}

.css-u2ali-Checkbox__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 5px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.css-yk4w75-Checkbox__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-yk4w75-Checkbox__iconLabel > i {
  font-size: 0.8rem;
}

.css-uxniji-Icon__root-Icon__bold {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="css-y5rx2e-Checkbox__root"
>
  <label
    className="css-1tp5q0a-Checkbox__wrapper undefined"
    htmlFor={1}
  >
    <div
      className="css-1kd1p7k-Checkbox__checkbox"
    >
      <input
        checked={false}
        className="css-nb67y4-Checkbox__input"
        id={1}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
      />
      <div
        className="css-u2ali-Checkbox__sprite"
        data-element="sprite"
      >
        <label
          className="css-yk4w75-Checkbox__iconLabel"
          data-element="icon"
          htmlFor={1}
        >
          <i
            className="Drycon Drycon-check css-uxniji-Icon__root-Icon__bold"
          />
        </label>
      </div>
    </div>
    <label
      className="css-1mryc00-Checkbox__label"
      data-element="label"
      htmlFor={1}
    >
      Label
    </label>
  </label>
</div>
`;

exports[`Checkbox matches snapshot when is checked 1`] = `
.css-y5rx2e-Checkbox__root {
  position: relative;
  display: inline-block;
}

.css-1tp5q0a-Checkbox__wrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.css-1tp5q0a-Checkbox__wrapper:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-1kd1p7k-Checkbox__checkbox {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-nb67y4-Checkbox__input {
  visibility: hidden;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-u2ali-Checkbox__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 5px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.css-yk4w75-Checkbox__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-yk4w75-Checkbox__iconLabel > i {
  font-size: 0.8rem;
}

.css-uxniji-Icon__root-Icon__bold {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="css-y5rx2e-Checkbox__root"
>
  <label
    className="css-1tp5q0a-Checkbox__wrapper undefined"
    htmlFor={1}
  >
    <div
      className="css-1kd1p7k-Checkbox__checkbox"
    >
      <input
        checked={true}
        className="css-nb67y4-Checkbox__input"
        id={1}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
      />
      <div
        className="css-u2ali-Checkbox__sprite"
        data-element="sprite"
      >
        <label
          className="css-yk4w75-Checkbox__iconLabel"
          data-element="icon"
          htmlFor={1}
        >
          <i
            className="Drycon Drycon-check css-uxniji-Icon__root-Icon__bold"
          />
        </label>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox matches snapshot when is large 1`] = `
.css-y5rx2e-Checkbox__root {
  position: relative;
  display: inline-block;
}

.css-1tp5q0a-Checkbox__wrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.css-1tp5q0a-Checkbox__wrapper:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-1kd1p7k-Checkbox__checkbox {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-nb67y4-Checkbox__input {
  visibility: hidden;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-u2ali-Checkbox__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 5px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.css-yk4w75-Checkbox__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-yk4w75-Checkbox__iconLabel > i {
  font-size: 0.8rem;
}

.css-uxniji-Icon__root-Icon__bold {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="css-y5rx2e-Checkbox__root"
>
  <label
    className="css-1tp5q0a-Checkbox__wrapper undefined"
    htmlFor={1}
  >
    <div
      className="css-1kd1p7k-Checkbox__checkbox"
    >
      <input
        checked={false}
        className="css-nb67y4-Checkbox__input"
        id={1}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
      />
      <div
        className="css-u2ali-Checkbox__sprite"
        data-element="sprite"
      >
        <label
          className="css-yk4w75-Checkbox__iconLabel"
          data-element="icon"
          htmlFor={1}
        >
          <i
            className="Drycon Drycon-check css-uxniji-Icon__root-Icon__bold"
          />
        </label>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox matches snapshot when is not checked 1`] = `
.css-y5rx2e-Checkbox__root {
  position: relative;
  display: inline-block;
}

.css-1tp5q0a-Checkbox__wrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.css-1tp5q0a-Checkbox__wrapper:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-1kd1p7k-Checkbox__checkbox {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-nb67y4-Checkbox__input {
  visibility: hidden;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-u2ali-Checkbox__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 5px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.css-yk4w75-Checkbox__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-yk4w75-Checkbox__iconLabel > i {
  font-size: 0.8rem;
}

.css-uxniji-Icon__root-Icon__bold {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="css-y5rx2e-Checkbox__root"
>
  <label
    className="css-1tp5q0a-Checkbox__wrapper undefined"
    htmlFor={1}
  >
    <div
      className="css-1kd1p7k-Checkbox__checkbox"
    >
      <input
        checked={false}
        className="css-nb67y4-Checkbox__input"
        id={1}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
      />
      <div
        className="css-u2ali-Checkbox__sprite"
        data-element="sprite"
      >
        <label
          className="css-yk4w75-Checkbox__iconLabel"
          data-element="icon"
          htmlFor={1}
        >
          <i
            className="Drycon Drycon-check css-uxniji-Icon__root-Icon__bold"
          />
        </label>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox matches snapshot when is read only 1`] = `
.css-z8uzdf-Icon__root {
  color: inherit;
}

.css-y5rx2e-Checkbox__root {
  position: relative;
  display: inline-block;
}

.css-1kd1p7k-Checkbox__checkbox {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-nb67y4-Checkbox__input {
  visibility: hidden;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-nb67y4-Checkbox__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-nb67y4-Checkbox__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-u2ali-Checkbox__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 5px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.css-yk4w75-Checkbox__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-yk4w75-Checkbox__iconLabel > i {
  font-size: 0.8rem;
}

.css-1aaiqce-Checkbox__wrapper-Checkbox__readOnly {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
  pointer-events: none;
}

.css-1aaiqce-Checkbox__wrapper-Checkbox__readOnly:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-1aaiqce-Checkbox__wrapper-Checkbox__readOnly [data-element="sprite"] {
  background: #eaeff4 !important;
}

.css-1aaiqce-Checkbox__wrapper-Checkbox__readOnly [data-element="locked-icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
  background: none;
  color: #879ba6;
}

<div
  className="css-y5rx2e-Checkbox__root"
>
  <label
    className="undefined css-1aaiqce-Checkbox__wrapper-Checkbox__readOnly"
    htmlFor={1}
  >
    <div
      className="css-1kd1p7k-Checkbox__checkbox"
    >
      <input
        checked={true}
        className="css-nb67y4-Checkbox__input"
        id={1}
        onChange={[Function]}
        readOnly={true}
        type="checkbox"
      />
      <div
        className="css-u2ali-Checkbox__sprite"
        data-element="sprite"
      >
        <label
          className="css-yk4w75-Checkbox__iconLabel"
          data-element="locked-icon"
        >
          <i
            className="css-z8uzdf-Icon__root Drycon Drycon-lock"
          />
        </label>
      </div>
    </div>
  </label>
</div>
`;
